# production-ready-wsi-segmentation-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
config/: config.yaml
models/: README.md
scripts/: prefect_test_client.py  visualize_mask.py
tests/: conftest.py  test_model.py  test_pipeline_preflight.py  test_reader.py  test_writer.py
wsi_pipeline/: __init__.py  config.py  model.py  pipeline.py  prefect_app.py  reader.py  utils.py  writer.py
